20250302_リザルト、ゲームオーバー、タイトル統合

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -212,7 +212,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.World
 WorldPartitionRuntimeHashSet=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserDrawer.SelectedPaths=/Game/Originals/BP
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserTab1.PluginFilters=
@@ -239,20 +239,23 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.ZoomScale=0
-ContentBrowserTab1.JumpMRU=/All/Game
-ContentBrowserTab1.JumpMRU=/All/Game/AncientTreasures
 ContentBrowserTab1.JumpMRU=/All/Game/UI
-ContentBrowserTab1.JumpMRU=/All/Game/Title
-ContentBrowserTab1.JumpMRU=/All/EngineData/Engine/EngineFonts
-ContentBrowserTab1.JumpMRU=/All/Game/Title/UI
+ContentBrowserTab1.JumpMRU=/All/Game/TresureBox
 ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson/Maps
 ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserTab1.JumpMRU=/All/Game/Originals
-ContentBrowserTab1.JumpMRU=/All/Game/TresureBox
+ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping
+ContentBrowserTab1.JumpMRU=/All/Game
+ContentBrowserTab1.JumpMRU=/All/Game/UI/Image
+ContentBrowserTab1.JumpMRU=/All/Game/UI/Font
+ContentBrowserTab1.JumpMRU=/All/Game/Title
+ContentBrowserTab1.JumpMRU=/All/Game/Title/UI
+ContentBrowserTab1.JumpMRU=/All/Game/UI/Material
+ContentBrowserTab1.JumpMRU=/All/Game/AncientTreasures
+ContentBrowserTab1.JumpMRU=/All/EngineData/Engine/EngineFonts
 ContentBrowserTab1.JumpMRU=/All/Game/Enemy
 ContentBrowserTab1.JumpMRU=/All/Game/Content/Content
 ContentBrowserTab1.JumpMRU=/All/Game/Content/Content/Level
-ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserTab1.JumpMRU=/All/Game/Content/Content/Environment
 ContentBrowserTab1.JumpMRU=/All/Game/Content
 ContentBrowserTab1.JumpMRU=/All/EngineData
@@ -266,9 +269,6 @@ ContentBrowserTab1.JumpMRU=/All/Game/Characters
 ContentBrowserTab1.JumpMRU=/All/Game/Characters/Mannequin_UE4/Materials
 ContentBrowserTab1.JumpMRU=/All/Game/Characters/Mannequins/Meshes
 ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping/Meshes
-ContentBrowserTab1.JumpMRU=/All/Game/Originals/BP
-ContentBrowserTab1.JumpMRU=/All/Game/UI/Font/Isego
-ContentBrowserTab1.JumpMRU=/All/Game/UI/Font
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 AssetPropertyPicker.ZoomScale=0
@@ -364,11 +364,11 @@ MaterialExpressionParameter="\"Object\" "
 MaterialExpression="\"Object\" "
 ScoreWidgetBP_C="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
 SizeBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
 ContentWidget="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
 K2Node_SetFieldsInStruct="\"Object\" "
@@ -392,8 +392,8 @@ MaterialExpressionConstant2Vector="\"Object\" "
 MaterialExpressionIf="\"Object\" "
 MaterialExpressionAdd="\"Object\" "
 MaterialExpressionFloor="\"Object\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransformPivot\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.ShadowOffset\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
 MaterialExpressionTextureCoordinate="\"Object\" "
 MaterialExpressionDivide="\"Object\" "
@@ -413,16 +413,16 @@ MovieSceneTrack="\"Object\" "
 MovieSceneSignedObject="\"Object\" "
 MovieSceneObjectPropertyTrack="\"Object\" "
 GameOverText_C="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
-TreasureCountBar_C="\"Object\" "
+TreasureCountBar_C="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
 DirectionalLightComponent="\"Object\" "
 LightComponent="\"Object\" "
 LightComponentBase="\"Object\" "
 K2Node_InputKey="\"Object\" "
-OpenLevelInputMessage_C="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
+OpenLevelInputMessage_C="\"Object\" "
 Overlay="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransformPivot\" "
 FontFace="\"Object\" \"Object.FontFace\" "
-GameResult_C="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
+GameResult_C="\"Object\" "
 TileView="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
 ListView="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
 ListViewBase="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -433,16 +433,18 @@ Actor="\"Object\" "
 MovieSceneColorSection="\"Object\" "
 MovieSceneSection="\"Object\" "
 HorizontalBox="\"Object\" \"Object.Render Transform.RenderTransformPivot\" "
+MovieSceneByteTrack="\"Object\" "
+MovieSceneByteSection="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -453,16 +455,14 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/UI/TreasureCountBar.TreasureCountBar
-OpenAssetsAtExit=/Game/UI/GameResult.GameResult
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/UI/GameResult
 MRUItem1=/Game/UI/TreasureCountBar
-MRUItem2=/Game/UI/ScoreWidgetBP
+MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem3=/Game/Title/UI/OpenLevelInputMessage
-MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem5=/Game/Title/Title
+MRUItem4=/Game/Title/Title
+MRUItem5=/Game/UI/ScoreWidgetBP
 MRUItem6=/Game/Content/Content/Level/Map01_BG
 MRUItem7=/Game/UI/Font/Zeninsyugou/スクリーンショット_2025-03-02_122707
 MRUItem8=/Game/UI/Font/Isego/スクリーンショット_2025-03-02_120512
@@ -1213,6 +1213,7 @@ HorizontalBox.Performance=True
 HorizontalBox.Rendering=True
 HorizontalBox.Navigation=True
 HorizontalBox.Localization=True
+GameResult_C.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Originals/BP/PlayerInterface.PlayerInterface=0
@@ -1679,7 +1680,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [Directories2]
